[package]
name = "test_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.22.0"
eframe = { version = "0.22.0", default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = { version = "1.0.107", features = ["preserve_order"] }
anyhow = "1.0.75"

tracing-wasm = "0.2.1"
wasm-bindgen-futures = "0.4.34"
wasm-bindgen = "0.2.84"
console_error_panic_hook = "0.1.6"
rfd = "0.12.0"
web-sys = { version = "0.3.64", features = ["console"] }
egui_dnd = "0.5.0"


[lib]
crate-type = ["cdylib", "rlib"]


[profile.release]
lto = true
opt-level = 'z'

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
